fix footer button spacing for adding assignments

--- a/tutor/resources/styles/components/task-plan/controls.less
+++ b/tutor/resources/styles/components/task-plan/controls.less
@@ -12,6 +12,10 @@
     }
   }
 
+  > .tour-anchor + .tour-anchor {
+    margin-left: 0.5rem;
+  }
+
   .tour-anchor { display: inline; }
   .save {
     background: @openstax-neutral;
